# src/main/java/com/laosarl/allocation_ressources/service/mapper/ResourceMapper.java
@@ -1,9 +1,18 @@
 package com.laosarl.allocation_ressources.service.mapper;
 
 
+import com.laosarl.allocation_ressources.domain.Resource;
+import com.laosarl.allocation_ressources.model.ResourceDTO;
+import org.mapstruct.BeanMapping;
 import org.mapstruct.Mapper;
+import org.mapstruct.MappingTarget;
+import org.mapstruct.NullValuePropertyMappingStrategy;
 
 @Mapper(componentModel = "spring")
 public interface ResourceMapper {
 
+    ResourceDTO toResourceDTO(Resource resource);
+
+    @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
+    void updateResourceFromDto(ResourceDTO dto, @MappingTarget Resource resource);
 }
